# fast-ta

./: .gitignore  BUILD.md  Cargo.toml  README  clippy.toml
.github/workflows/: ci.yml
.sisyphus/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_MERGED.md  PRACTICAL_GUIDE.md  QUALITY_ASSURANCE_PLAN.md  RESOURCE_PLAN.md
.sisyphus/plans/: simd-implementation.md
crates/ta-benchmarks/: Cargo.toml
crates/ta-benchmarks/benches/: basic.rs  sma.rs
crates/ta-core/: Cargo.toml
crates/ta-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ta-core/src/overlap/: mod.rs  sma.rs
crates/ta-core/src/simd/: dispatch.rs  mod.rs  scalar.rs  types.rs
crates/ta-core/src/simd/arch/: mod.rs
crates/ta-core/src/simd/arch/aarch64/: mod.rs  neon.rs
crates/ta-core/src/simd/arch/wasm32/: mod.rs  simd128.rs
crates/ta-core/src/simd/arch/x86_64/: avx2.rs  avx512.rs  mod.rs
crates/ta-core/tests/: aarch64_simd.rs  wasm_simd.rs  x86_64_simd.rs
crates/ta-py/: Cargo.toml  types.rs
crates/ta-py/src/: lib.rs
crates/ta-wasm/: Cargo.toml  wasm-pack.toml
crates/ta-wasm/src/: lib.rs
