[workspace]
resolver = "3"
members = [
    "crates/ta-core",
    "crates/ta-py",
    "crates/ta-wasm",
    "crates/ta-benchmarks",
]
default-members = [
    "crates/ta-core",
    "crates/ta-wasm",
    "crates/ta-benchmarks",
]

[workspace.dependencies]
wide = { version = "1.1", features = ["std"] }
