[package]
name = "ta-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["TA-Lib Rust Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rs-indicators"
description = "Python bindings for technical analysis indicators"
keywords = ["python", "pyo3", "technical-analysis", "trading", "indicators"]
categories = ["api-bindings", "wasm"]

[lib]
name = "ta_py"
crate-type = ["cdylib"]

[dependencies]
ta-core = { path = "../ta-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[package.metadata.maturin]
name = "ta_py"

[package.metadata.docs.rs]
all-features = true
