[package]
name = "ta-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["TA-Lib Rust Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rs-indicators"
description = "WebAssembly bindings for technical analysis indicators"
keywords = ["wasm", "webassembly", "javascript", "technical-analysis", "indicators"]
categories = ["api-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ta-core = { path = "../ta-core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
